# dash-control

./: README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: release.yml
dashcontrol/: __init__.py  config.py  formatters.py  runner.py  sql.py  ui.py
docs/api/: dashcontrol.html  index.html  search.js
tests/: test_config.py  test_dashcontrol.py  test_formatters.py  test_runner.py  test_sql.py
